agregar marker variable

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div id="map"></div>
     <div id="search">
       <label for="pointA">Point A:</label>
-      <input type="text" id="pointA" />
+      <input type="text" id="pointA" value="berlin" />
       <label for="pointB">Point B:</label>
-      <input type="text" id="pointB" />
+      <input type="text" id="pointB" value="munich" />
       <button onclick="findMiddlePoint()">Find a middle point</button>
     </div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
