--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <label for="categories">Select a categorie:</label>
         <select id="categories">
           <option value="bar">Bar</option>
-          <option value="restaurant">Restaurante</option>
-          <option value="museum">Museo</option>
-          <option value="cafe">Cafetería</option>
-          <option value="park">Parque</option>
-          <option value="art">Arte</option>
+          <option value="restaurant">Restaurant</option>
+          <option value="museum">Museum</option>
+          <option value="cafe">Cafe</option>
+          <option value="park">Park</option>
+          <option value="art">Art</option>
         </select>
       </div>
       <button onclick="findMiddlePoint()">Find a middle point</button>
